2008-07-28  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/cli.py:
	Add support for multiple actions groups. For each action group,
	only one action can be specified. This enables multiple actions
	handlind as specified in issue 9. But, this is not final yet as
	the order in which the actions run is not the same as user
	specified. Working on this now, commit just to create a runnable
	snapshot.

	Fix bug on _validateParameter: now validating only specified
	options (was trying to validate all independent of what user
	specified).

	* src/chimera/core/tests/chimera-dome.py:
	* src/chimera/core/tests/chimera-focus.py: Update to new helpGroup
	option.

2008-07-27  P. Henrique Silva  <henrique@astro.ufsc.br>

	*** chimera-new-scripts branch ***

	* src/chimera/core/cli.py:
	Add Local Mnager host/port configuration.
	Add include path options.

	* src/chimera/core/tests/chimera-dome.py: Updated groups for
	better help message.

2008-07-27  P. Henrique Silva  <henrique@astro.ufsc.br>

	*** chimera-new-scripts branch ***

	* src/chimera/core/cli.py: Much better implementation of
	_getObjects method. Working with most configurations of
	local/remote instrument/driver. Needs test cases for promotion to
	stable branch.

	* .project:
	* .pydevproject: updated to branch project.

	* src/chimera/core/chimera.config.sample
	* src/chimera/core/chimera.sample.config: Rename.
	* src/chimera/core/constants.py: Updated for above rename.

	* src/chimera/core/classloader.py: Accepts string paths.
	* src/chimera/core/manager.py: Add exception handling on daemon
	start.
	* src/chimera/core/systemconfig.py: Hack! need better
	implementation of multiple yaml files handling (location creation
	versus host/port config)
	* src/chimera/instruments/dome.py: less verbose dome.


2008-07-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/path.py: New way to get Chimera paths. Use
	pkg_resources to get correct installation place or just guess.
